--- a/css/style.css
+++ b/css/style.css
@@ -57,4 +57,26 @@
   border-radius: 5px;
   background: var(--blu);
   color: var(--wht);
+}
+
+/* main */
+.main {
+  background: var(--gry);
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.main .text {
+  font-size: 4.5rem;
+  margin: 1rem;
+  font-weight: 500;
+}
+.main input {
+  padding: 16px;
+  width: 720px;
+  border: 1px solid black;
+  font-size: 1.3rem;
+  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.3);
 }/*# sourceMappingURL=style.css.map */
