--- a/css/style.scss
+++ b/css/style.scss
@@ -66,3 +66,27 @@
     }
   }
 }
+
+/* main */
+.main {
+  background: var(--gry);
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  .text {
+    font-size: 4.5rem;
+    margin: 1rem;
+    font-weight: 500;
+  }
+
+  input {
+    padding: 16px;
+    width: 720px;
+    border: 1px solid black;
+    font-size: 1.3rem;
+    box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.3);
+  }
+}
