--- a/css/style.css
+++ b/css/style.css
@@ -59,8 +59,8 @@
   color: var(--wht);
 }
 
-/* main */
-.main {
+/* hero */
+.hero {
   background: var(--gry);
   height: 400px;
   display: flex;
@@ -68,15 +68,51 @@
   align-items: center;
   flex-direction: column;
 }
-.main .text {
+.hero .text {
   font-size: 4.5rem;
   margin: 1rem;
   font-weight: 500;
 }
-.main input {
+.hero input {
   padding: 16px;
   width: 720px;
   border: 1px solid black;
   font-size: 1.3rem;
   box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.3);
+}
+
+/* main */
+.main {
+  display: flex;
+  flex-flow: row wrap;
+  margin: 6rem auto;
+}
+.main .content-block {
+  display: flex;
+  width: 45%;
+  margin: 3rem auto;
+}
+.main .content-block img {
+  width: 6rem;
+}
+.main .content-block .content-right {
+  margin-left: 2rem;
+}
+.main .content-block .content-right .heading h2 {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+.main .content-block .content-right .paragraph {
+  font-size: 1.5rem;
+  margin: 0.8rem auto;
+}
+.main .content-block .content-right a {
+  text-decoration: none;
+  font-size: 1.2rem;
+  color: var(--blu);
+  font-weight: 500;
+}
+.main .content-block .content-right a:hover {
+  text-decoration: underline;
+  text-decoration-thickness: 2px;
 }/*# sourceMappingURL=style.css.map */
