--- a/css/style.scss
+++ b/css/style.scss
@@ -67,8 +67,8 @@
   }
 }
 
-/* main */
-.main {
+/* hero */
+.hero {
   background: var(--gry);
   height: 400px;
   display: flex;
@@ -88,5 +88,50 @@
     border: 1px solid black;
     font-size: 1.3rem;
     box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.3);
+  }
+}
+
+/* main */
+.main {
+  display: flex;
+  flex-flow: row wrap;
+  margin: 6rem auto;
+
+  .content-block {
+    display: flex;
+    width: 45%;
+    margin: 3rem auto;
+
+    img {
+      width: 6rem;
+    }
+
+    .content-right {
+      margin-left: 2rem;
+
+      .heading {
+        h2 {
+          font-size: 1.5rem;
+          font-weight: 700;
+        }
+      }
+
+      .paragraph {
+        font-size: 1.5rem;
+        margin: 0.8rem auto;
+      }
+
+      a {
+        text-decoration: none;
+        font-size: 1.2rem;
+        color: var(--blu);
+        font-weight: 500;
+
+        &:hover {
+          text-decoration: underline;
+          text-decoration-thickness: 2px;
+        }
+      }
+    }
   }
 }
