--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,14 @@ body {
   border: 1px solid black;
   font-size: 1.3rem;
   box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.3);
+  transition: 0.3s ease;
+  outline: none;
+}
+.hero input:hover {
+  border-color: var(--blu);
+}
+.hero input:focus {
+  border-color: var(--blu);
 }
 
 /* main */
