--- a/css/style.scss
+++ b/css/style.scss
@@ -92,6 +92,16 @@ body {
     border: 1px solid black;
     font-size: 1.3rem;
     box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.3);
+    transition: 0.3s ease;
+    outline: none;
+
+    &:hover {
+      border-color: var(--blu);
+    }
+
+    &:focus {
+      border-color: var(--blu);
+    }
   }
 }
 
